Fix: Title not visible but not hidden (takes place).

--- a/src/main/webapp/css/theme0.css
+++ b/src/main/webapp/css/theme0.css
@@ -3643,5 +3643,10 @@ input.ck-kaptcha {
 	background-image:url(../images/theme0/form-input-gradient.png);
 }
 
+/* QuickShareWindow */
+#quickShareWindowContent #panelUpload_content h2 {
+	display: none;
+}
+
 /***************************************************************************/
 /* EOF */
